<resources>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="알림설정">알림설정</string>
    <string name="설정된시간">설정된 시간</string>
    <string name="알림설정버튼">알림 설정</string>
    <string name="time">PM 22 : 00</string>
    <string name="비밀번호설정">비밀번호 설정</string>
    <string name="비밀번호설정버튼">비밀번호 설정</string>
    <string name="리셋버튼">초기화</string>
    <string name="오픈소스라이선스버튼">오픈소스 라이선스</string>
    <string name="폰트라이선스버튼">폰트 라이선스</string>
    <string name="정책">이 프로그램은 아파치 2.0 라이선스와 BSD 라이선스를 기반으로 제작하였으며, \n 이 프로그램에 사용된 폰트는 네이버에서 제공한 마루 부리 글꼴이 적용되어 있습니다. \n 자세한 내용은 위의 라이선스 내용을 참고해 주세요.</string>
    <string name="라이선스확인">확인</string>
    <string name="날짜라벨">"날짜 : "</string>
    <string name="날씨라벨">"날씨 : "</string>
    <string name="날씨힌트">날씨를 입력해 주세요. (선택 사항)</string>
    <string name="기분라벨">"기분 : "</string>
    <string name="기분힌트">기분을 입력해 주세요. (선택 사항)</string>
    <string name="태그라벨">"태그 : "</string>
    <string name="태그힌트">태그를 입력해 주세요. (선택 사항)</string>
    <string name="내용힌트">내용을 입력해 주세요.</string>
    <string name="setting">설정</string>
    <string name="opensorcelititle">오픈소스 라이선스</string>
    <string name="setting_alldel_Warning">주의!</string>
    <string name="waring_coment">저장된 모든 일기를 제거하시겠습니까? \n*한번 지운 일기는 복구 불가능합니다. \n*설정한 비밀번호도 삭제됩니다. \n*앱이 재시작 됩니다.</string>
    <string name="alldel_ok">확인</string>
    <string name="reset_comple">초기화 완료.</string>
    <string name="cancel">취소</string>
    <string name="set_password_title">설정</string>
    <string name="set_pas_titlecoment">비밀 번호를 설정 하시겠습니까? 또는 삭제 하시겠습니까?</string>
    <string name="set_pas_button1">설정</string>
    <string name="set_pas_button2_del">삭제</string>
    <string name="set_pas_del_coment">비밀번호 삭제 완료.</string>
    <string name="noget_pas">비밀번호가 설정되어있지 않습니다.</string>
    <string name="set_pas_cancle">취소</string>
    <string name="comple_alrm_set_coment">알람이 저장되었습니다.</string>
    <string name="exitdialog_title">종료</string>
    <string name="exit_coment">프로그램을 종료하시겠습니까?</string>
    <string name="yes">네</string>
    <string name="No">아니요</string>
    <string name="plase_enter_your_pass">사용할 비밀번호 4자리를 입력해 주세요.</string>
    <string name="check_pass">비밀번호 4 자리를 입력해 주세요.</string>
    <string name="re_set_pass">비밀번호를 다시 입력해 주세요.</string>
    <string name="comple_pass">저장이 완료되었습니다.</string>
    <string name="comple_pass_2">비밀번호 저장 완료</string>
    <string name="no_comple_pass">비밀번호가 일치하지 않습니다.  다시 입력해 주세요.</string>
    <string name="re_pass">비밀번호를 다시 입력해 주세요.</string>
    <string name="ok_pass">확인 완료</string>
    <string name="ifnopass_del">비밀번호가 일치하지 않습니다.   \n분실하신 경우 재설치를 해야 합니다.</string>
    <string name="getsetpass_one">비밀번호를 입력해 주세요.</string>
    <string name="getsetpass_ok">확인</string>
    <string name="saveitfile">이미 해당 날짜에 저장된 일기가 있습니다.</string>
    <string name="Date_eng">"날짜 : "</string>
    <string name="file_save_read">파일 저장 준비중.</string>
    <string name="saveing">저장중 입니다.</string>
    <string name="save_comple">저장 완료</string>
    <string name="failroadfile">파일 불러오기를 실패했습니다. 다시 시도해 주세요.</string>
    <string name="back_hint">내용을 입력해 주세요.</string>
    <string name="alldelbuttoncoment">내용을 전부 삭제하시겠습니까?   \n저장하지 않은 내용은 저장되지 않습니다.</string>
    <string name="golist">일기 리스트 페이지로 이동하시겠습니까?  \n저장하지 않은 내용은 삭제됩니다.</string>
    <string name="delpic">설정한 사진을 삭제 하시겠습니까?</string>
    <string name="Color">색상</string>
    <string name="Color_coment">배경화면 또는 글자 색상을 변경을 선택해 주세요.</string>
    <string name="background">배경화면</string>
    <string name="set_background">배경색 설정</string>
    <string name="Font_color">글자 색상</string>
    <string name="setFontColor">글자색 설정</string>
    <string name="img">이미지</string>
    <string name="getimgcoment">이미지를 불러오시겠습니까?</string>
    <string name="Goedit">이동</string>
    <string name="edithistory">일기 수정 페이지로 이동하시겠습니까?</string>
    <string name="delhistory">선택한 일기를 삭제하시겠습니까?</string>
    <string name="delcomple">삭제 완료</string>
    <string name="alrmtitle">해따 왔어요!</string>
    <string name="alrmmemo">오늘도 알찬 하루를 기록해 볼까요?</string>
    <string name="alrmsetting">알림</string>
    <string name="title">-기록의 즐거움-</string>
    <string name="GO">이동중</string>
    <string name="delpicnow">선택한 사진을 삭제 하시겠습니까?  일기장에서도 사진이 지워집니다.</string>
    <string name="goodhistory">소중한 기억들</string>
    <string name="font_chose">폰트 선택</string>
    <string name="zoom">확대</string>
    <string name="test_font">미리보기</string>
    <string name="적용">적용</string>


</resources>