<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/firstback"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".edit">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        >

        <ImageButton
            android:id="@+id/Setting"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/ic_baseline_settings_24"
            />

        <ImageButton
            android:id="@+id/reexit"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/ic_baseline_exit_to_app_24" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/edithistory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/editDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/topandbottom"
            android:fontFamily="@font/font"
            android:paddingTop="2.5dp"
            android:paddingBottom="2.5dp"
            android:text="@string/날짜라벨"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/weatherEditLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/line"
            android:orientation="horizontal"
            android:paddingTop="2.5dp"
            android:paddingBottom="2.5dp">

            <TextView
                android:id="@+id/Weather"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/font"
                android:text="@string/날씨라벨"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/Weatheredit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:fontFamily="@font/font"
                android:hint="@string/날씨힌트"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mindeditLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/line"
            android:orientation="horizontal"
            android:paddingTop="2.5dp"
            android:paddingBottom="2.5dp">

            <TextView
                android:id="@+id/mind"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/font"
                android:text="@string/기분라벨"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/mindedit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:fontFamily="@font/font"
                android:hint="@string/기분힌트"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="15sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/tagEditLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/line"
            android:orientation="horizontal"
            android:paddingTop="2.5dp"
            android:paddingBottom="2.5dp">

            <TextView
                android:id="@+id/Tag"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/font"
                android:text="@string/태그라벨"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/tagedit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:fontFamily="@font/font"
                android:hint="@string/태그힌트"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/editbox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ScrollView
                android:id="@+id/editscroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    tools:visibility="visible">

                    <ImageView
                        android:id="@+id/rehistorypic"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:scaleType="fitCenter"
                        android:visibility="gone"
                        app:srcCompat="@drawable/ic_baseline_add_photo_alternate_24" />

                    <EditText
                        android:id="@+id/editText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:background="#00000000"
                        android:fontFamily="@font/font"
                        android:gravity="center"
                        android:hint="@string/내용힌트"
                        android:inputType="textMultiLine"
                        android:scrollbars="vertical"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="14sp"
                        android:visibility="visible" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/actionbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/topline"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageButton
            android:id="@+id/clear"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/ic_baseline_delete_forever_24"
            android:scaleType="fitCenter" />

        <ImageButton
            android:id="@+id/backgroundch"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/ic_baseline_color_lens_24" />

        <ImageButton
            android:id="@+id/sort"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="20dp"
            android:background="#00000000"
            android:backgroundTint="#00000000"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_baseline_line_weight_24"
             />

        <ImageButton
            android:id="@+id/Imgadd"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/ic_baseline_add_photo_alternate_24"
            android:scaleType="fitCenter" />

        <ImageButton
            android:id="@+id/save"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_baseline_save_24"
            android:scaleType="fitCenter" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/chosedate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        tools:visibility="visible">

        <com.prolificinteractive.materialcalendarview.MaterialCalendarView
            android:id="@+id/calendarView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_line"
            android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
            app:mcv_selectionColor="#9974D36D"
            app:mcv_showOtherDates="defaults" />

    </LinearLayout>
</LinearLayout>
